syntax = "proto3";

package payment;

service PaymentService {
  // Payment CRUD operations
  rpc InitiatePayment (InitiatePaymentRequest) returns (PaymentResponse);
  rpc ConfirmPayment (ConfirmPaymentRequest) returns (PaymentResponse);
  rpc GetPaymentById (PaymentIdRequest) returns (PaymentResponse);
  rpc GetAllPayments (PaginationRequest) returns (PaginatedPaymentListResponse);
  rpc GetPaymentsByInvoice (InvoiceIdRequest) returns (PaymentListResponse);
  rpc GetPaymentStats (Empty) returns (PaymentStatsResponse);
  rpc ProcessPayment (ProcessPaymentRequest) returns (ProcessPaymentResponse);
}

// Common messages
message Empty {}

// Pagination messages
message PaginationRequest {
  int32 page = 1;
  int32 limit = 2;
}

message PaginationMeta {
  int32 page = 1;
  int32 limit = 2;
  int32 total = 3;
  int32 totalPages = 4;
  bool hasNext = 5;
  bool hasPrev = 6;
}

// Payment messages
message Payment {
  string id = 1;
  string invoiceId = 2;
  optional string orderId = 3;
  optional string customerId = 4;
  double totalAmount = 5;
  string status = 6;
  string method = 7;
  optional string transactionId = 8;
  optional string failureReason = 9;
  optional string paidAt = 10;
  string createdAt = 11;
  string updatedAt = 12;
}

message InitiatePaymentRequest {
  string invoiceId = 1;
  optional string orderId = 2;
  optional string customerId = 3;
  double amount = 4;
  string method = 5;
}

message ConfirmPaymentRequest {
  string paymentId = 1;
  string status = 2;
  optional string transactionId = 3;
  optional double amount = 4;
  optional string failureReason = 5;
}

message PaymentIdRequest {
  string id = 1;
}

message InvoiceIdRequest {
  string invoiceId = 1;
}

message PaymentResponse {
  Payment payment = 1;
}

message PaymentListResponse {
  repeated Payment payments = 1;
}

message PaginatedPaymentListResponse {
  repeated Payment payments = 1;
  PaginationMeta pagination = 2;
}

message PaymentStatsResponse {
  int32 totalPayments = 1;
  int32 successfulPayments = 2;
  int32 failedPayments = 3;
  int32 pendingPayments = 4;
  double totalAmount = 5;
  double successfulAmount = 6;
}

message ProcessPaymentRequest {
  string invoiceId = 1;
  double amount = 2;
  string paymentMethod = 3;
}

message ProcessPaymentResponse {
  bool success = 1;
  string message = 2;
  Payment payment = 3;
  optional string subscriptionId = 4;
}
