syntax = "proto3";

package llm;

// Định nghĩa service chính cho Orchestrator
service LlmOrchestratorService {
  // Gửi 1 yêu cầu chat duy nhất, nhận kết quả phân tích + changeset
  rpc ChatOnce (LlmChatRequest) returns (LlmChatResponse);
  
  // AI Chat: Generate text response
  rpc GenerateText (GenerateTextRequest) returns (GenerateTextResponse);
  
  // AI Chat: Generate code
  rpc GenerateCode (GenerateCodeRequest) returns (GenerateCodeResponse);
  
  // AI Recommend: Tư vấn mô hình kinh doanh phù hợp
  rpc RecommendBusinessModel (RecommendModelRequest) returns (RecommendModelResponse);
  
  // AI Recommend Detailed: Tư vấn mô hình với changeset chi tiết cho Human-in-the-loop
  rpc RecommendBusinessModelDetailed (RecommendModelDetailedRequest) returns (RecommendModelDetailedResponse);
  
  // Switch business model và trigger Helm deployment
  rpc SwitchBusinessModel (SwitchModelRequest) returns (SwitchModelResponse);
  
  // Text-to-SQL: Natural language to SQL query
  rpc TextToSql (TextToSqlRequest) returns (TextToSqlResponse);
  
  // Analyze system incident
  rpc AnalyzeIncident (AnalyzeIncidentRequest) returns (AnalyzeIncidentResponse);
  
  // Generate Dynamic Changeset using RAG (API 2 - AI-powered discovery)
  rpc GenerateDynamicChangeset (DynamicChangesetRequest) returns (DynamicChangesetResponse);
}

// ====== Request & Response ======

message LlmChatRequest {
  string message = 1;     // Câu hỏi hoặc yêu cầu nghiệp vụ tự nhiên
  string tenant_id = 2;   // Tenant đang thao tác
  string role = 3;        // Vai trò người dùng (admin, staff, ...)
  string lang = 4;        // Ngôn ngữ (vi, en, ...)
}

message LlmChatResponse {
  string proposal_text = 1;     // Văn bản đề xuất của LLM
  Changeset changeset = 2;      // Tập thay đổi cấu hình hệ thống
  Metadata metadata = 3;        // Thông tin ngữ nghĩa (intent, confidence, risk)
}

// ====== Nested Structures ======

message Changeset {
  string model = 1;                 // Tên model / domain entity bị ảnh hưởng
  repeated Feature features = 2;    // Danh sách key-value thay đổi
  repeated string impacted_services = 3; // Các service bị ảnh hưởng
}

message Feature {
  string key = 1;
  string value = 2;
}

message Metadata {
  string intent = 1;       // Hành động hoặc ý định của người dùng
  double confidence = 2;   // Độ tin cậy của model
  string risk = 3;         // Mức độ rủi ro: low / medium / high
}

// ====== AI Chat Messages ======

message GenerateTextRequest {
  string prompt = 1;               // User message/prompt
  repeated ContextMessage context = 2;  // Conversation context
}

message GenerateTextResponse {
  string text = 1;                 // AI generated text response
}

message GenerateCodeRequest {
  string prompt = 1;               // Code generation prompt
  repeated ContextMessage context = 2;  // Context for code generation
}

message GenerateCodeResponse {
  string code = 1;                 // Generated code
  string language = 2;             // Programming language
  string explanation = 3;          // Explanation of the code
}

message ContextMessage {
  string role = 1;                 // 'user' or 'assistant'
  string content = 2;              // Message content
}

// ====== Business Model Recommendation ======

message RecommendModelRequest {
  string business_description = 1;  // Mô tả về doanh nghiệp/sản phẩm
  string target_audience = 2;       // Đối tượng khách hàng mục tiêu
  string revenue_preference = 3;    // Mong muốn về doanh thu (một lần, định kỳ, freemium)
  string lang = 4;                  // Ngôn ngữ (vi, en)
}

message RecommendModelResponse {
  string greeting = 1;              // Lời chào thân thiện
  string recommendation_intro = 2;  // Giới thiệu ngắn về đề xuất
  string recommended_model = 3;     // retail, subscription, freemium, multi
  string why_this_fits = 4;         // Giải thích tại sao phù hợp
  string how_it_works = 5;          // Giải thích cách hoạt động
  repeated string next_steps = 6;   // Các bước tiếp theo
  string alternatives_intro = 7;    // Giới thiệu các lựa chọn khác
  repeated ModelAlternative alternatives = 8; // Các lựa chọn khác
  string closing = 9;               // Lời kết
}

message ModelAlternative {
  string model = 1;                 // retail, subscription, freemium, multi
  string brief_reason = 2;          // Lý do ngắn gọn
}

// ====== Detailed Business Model Recommendation ======

message RecommendModelDetailedRequest {
  string business_description = 1;  // Mô tả về doanh nghiệp/sản phẩm
  string current_model = 2;         // Mô hình hiện tại (retail, subscription, freemium, multi)
  string target_audience = 3;       // Đối tượng khách hàng mục tiêu
  string revenue_preference = 4;    // Mong muốn về doanh thu
  string lang = 5;                  // Ngôn ngữ (vi, en)
}

message RecommendModelDetailedResponse {
  string proposal_text = 1;         // Văn bản đề xuất
  Changeset changeset = 2;          // Changeset chi tiết với impacted_services
  DetailedMetadata metadata = 3;    // Metadata với risk assessment
}

message DetailedMetadata {
  string intent = 1;                // Hành động (business_model_change)
  double confidence = 2;            // Độ tin cậy (0.0 - 1.0)
  string risk = 3;                  // Mức độ rủi ro: low / medium / high
  string from_model = 4;            // Mô hình cũ
  string to_model = 5;              // Mô hình mới
}

// ====== Switch Business Model ======

message SwitchModelRequest {
  string to_model = 1;              // Model muốn chuyển sang: retail, subscription, freemium, multi
  string tenant_id = 2;             // Tenant ID
  bool dry_run = 3;                 // Nếu true, chỉ generate YAML mà không deploy
}

message SwitchModelResponse {
  bool success = 1;                 // Thành công hay không
  string message = 2;               // Thông báo
  string changeset_path = 3;        // Đường dẫn file changeset YAML
  bool deployed = 4;                // Đã deploy chưa
  bool dry_run = 5;                 // Có phải dry run không
  string error = 6;                 // Lỗi nếu có
  HelmDryRunResults helm_dry_run_results = 7; // Kết quả Helm dry-run chi tiết
}

// Helm Dry-run Results
message HelmDryRunResults {
  bool validation_passed = 1;       // Template validation có pass không
  string databases_output = 2;      // Output của helm dry-run databases
  string services_output = 3;       // Output của helm dry-run services
  repeated string validation_errors = 4; // Lỗi validation nếu có
  repeated string warnings = 5;     // Warnings từ Helm
}

// ====== Text-to-SQL ======

message TextToSqlRequest {
  string question = 1;              // Câu hỏi tự nhiên
  string lang = 2;                  // Ngôn ngữ (vi, en)
}

message TextToSqlResponse {
  bool success = 1;                 // Thành công hay không
  string question = 2;              // Câu hỏi gốc
  string sql = 3;                   // SQL query được tạo
  string natural_response = 4;      // Câu trả lời tự nhiên
  string raw_data = 5;              // Dữ liệu raw (JSON)
  string error = 6;                 // Lỗi nếu có
}

// ====== Incident Analysis ======

message AnalyzeIncidentRequest {
  string incident_description = 1;  // Mô tả sự cố
  string logs = 2;                  // Log hệ thống
  string lang = 3;                  // Ngôn ngữ (vi, en)
}

message AnalyzeIncidentResponse {
  string severity = 1;              // low, medium, high, critical
  string analysis = 2;              // Phân tích chi tiết
  repeated string recommendations = 3; // Khuyến nghị
  string raw_response = 4;          // Raw response từ LLM
}

// ====== Dynamic Changeset (API 2 - AI Discovery) ======

message DynamicChangesetRequest {
  string user_intent = 1;           // User intent / business description
  string current_model = 2;         // Current business model (optional)
  string target_model = 3;          // Target business model (optional)
  repeated string force_services = 4; // Force include these services
  repeated string exclude_services = 5; // Force exclude these services
  bool dry_run = 6;                 // If true, only validate with Helm --dry-run
  bool deploy_after_validation = 7; // If true and dry_run passes, deploy automatically
  string tenant_id = 8;             // Tenant ID
}

message DynamicService {
  string name = 1;                  // Service name
  bool enabled = 2;                 // Is service enabled
  int32 replica_count = 3;          // Replica count
  bool needs_restart = 4;           // Needs restart flag
  double confidence = 5;            // RAG confidence score (0-1)
}

message DynamicChangesetData {
  string timestamp = 1;             // Generation timestamp
  string intent = 2;                // User intent
  string from_model = 3;            // Current model
  string to_model = 4;              // Target model
  repeated string discovered_services = 5; // All discovered services
  repeated DynamicService services = 6; // Analyzed services
  string risk_level = 7;            // Risk level: low, medium, high
  bool auto_generated = 8;          // Was auto-generated
}

message DynamicChangesetResponse {
  bool success = 1;                 // Success flag
  string message = 2;               // Status message
  string error = 3;                 // Error message if failed
  DynamicChangesetData changeset = 4; // Generated changeset data
  string json_path = 5;             // Path to JSON file
  string yaml_path = 6;             // Path to YAML file
  HelmDryRunResults helm_validation = 7; // Helm dry-run results (if dry_run=true)
  bool deployed = 8;                // Was deployed (if deploy_after_validation=true)
  bool fallback_available = 9;      // If failed, can fallback to switch-model API
  repeated string fallback_models = 10; // Available models for fallback
}
